public/css/styles.css
body {
  font-size: 12px;
}
h1{
  text-align: center;
  line-height: 125%;
}
.navbar-brand{
  position: absolute;
  width: 100%;
  left: 0;
  z-index: 5;
  text-align: center;
  margin:0 auto;
}
.back-button{
  position: absolute;
  left: 0;
  z-index: 10;
  margin-top: 7px
}


.form-group.required .control-label:after {
  content:"*";
  color:red;
}
.list-group-item{
  cursor: pointer;
}

/*login*/
.main {
  max-width: 350px;
  margin: 0 auto;
}
.login-or {
  position: relative;
  font-size: 18px;
  color: #aaa;
  margin-top: 10px;
  margin-bottom: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
}
.span-or {
  display: block;
  position: absolute;
  left: 50%;
  top: -2px;
  margin-left: -50px;
  background-color: #fff;
  width: 100px;
  text-align: center;
}
.hr-or {
  background-color: #cdcdcd;
  height: 1px;
  margin-top: 0px !important;
  margin-bottom: 0px !important;
}
h3{
  text-align: center;
}
.login .alert-danger{
    margin-top:10px
}
/*form*/
.form-horizontal .form-group {
  margin-right:0;
  margin-left:0;
}

.help-block{
  margin-top:0;
  margin-bottom:0;
}

/* admin */
.admin{
  margin: 0 auto;
  max-width: 360px;
  min-width: 360px;
}
.adminList .list{
  min-height: 45px;
  padding: 10px;
}
.adminList .adminName{
  font-size: 1.3em;
  word-wrap: break-word;
  max-width: 200px;
}
.adminList .btn-group{
  position: absolute;
  top: 5px;
  right: 5px;
}
.adminList .dropdown-menu{
  margin-left: -34px;
  min-width: 110px;
}
.adminManage{
  text-align: center;
  margin-bottom: 30px;
}

.pointer{
  cursor:pointer;
}

/*Specific Doctor view on patient search*/
.user-row {
    margin-bottom: 14px;
}
.user-row:last-child {
    margin-bottom: 0;
}
.dropdown-user {
    margin: 13px 0;
    padding: 5px;
    height: 100%;
}
.dropdown-user:hover {
    cursor: pointer;
}
.table-user-information > tbody > tr {
    border-top: 1px solid rgb(221, 221, 221);
}
.table-user-information > tbody > tr:first-child {
    border-top: 0;
}
.table-user-information > tbody > tr > td {
    border-top: 0;
}
.toppad {
  margin-top:20px;
}
.profileAlerts .alert{
  margin-bottom:0;
  padding:5px;
}
.fullWidth{
  width:100%;
}

.halfWidth{
  width:50%;
}

.fa-check-circle-o{
  color:green;
}
.avaliable{
  height:102px;
  width:100%;
}
.avaliable tr{
  width:100%;
  height:34px;
}
.avaliable td{
  width:100%;
  text-align: center;
}
.uib-timepicker{
  margin : 0 auto;
  text-align:center;
}

.specialties .list-group{
  padding-left: 15px;
}

.timePicker .panel-body .uib-timepicker:nth-child(1){
  margin-bottom: 10px;
}

.apptDetails h3{
  display:inline-block;
}

.apptDetails .down{
  margin-top:20px;
  marign-bottom: 10px;
}


.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

.uib-daypicker{
  margin:0 auto;
}

